syntax = "proto3";
package chatter;

service Chatterbox{
     rpc ChatterClientStream (stream ChatterThere) returns (stream ChatterBack){};

}

message ChatterBack{
     string response = 1;
}

message ChatterThere{
     string request = 1;
}

message ChatterStreamBack{
     string response = 1;
}

message ChatterStreamThere{
     string request = 1;
}
